   CHANGES IN trip VERSION 1.5.0

o new data set walrus818

o new function homedist

o added imports for recommended package functions

o new replace method for one-step trip creation

o removed character method for spTransform, now standard in rgdal/sp

   BUG FIXES 
   
o fix for last namespace clash with dplyr in cut.trip

o argos.sigma was not vectorized on adjust for argment x, fixed

  CHANGES IN trip VERSION 1.1-21
  
o modified PROJ.4 string in vignette for CRAN

o moved vignette stub to knitr markdown
  
  CHANGES IN trip VERSION 1.1-20

o rasterize for trip can now accept a 'field' argument to replace the default
 time-spent calculation
 
o trip now Imports raster, for use of rasterize to replace tripGrid

o new function homedist

o bug fix via complete rewrite of cut.trip, including modification of argument name "dates" to "breaks"

o modified example with missing +ellps to satisfy new PROJ.4 (thanks to Roger Bivand)

  CHANGES IN trip VERSION 1.1-19

o urgent bug fix release for trackDistance

o Package Title Gets Title Case

CHANGES IN trip VERSION 1.1-18

OVERVIEW

 o fixed missing Suggest for rgdal for CRAN (thanks to Prof. Ripley)

 o new function sda, and efficient and flexible implementation of argosfilter

SIGNIFICANT USER-VISIBLE CHANGES 

 o cut can now accept a character
  string like "2 hours" as per cut.POSIXt, rather than all explicit
  interval boundaries

  CHANGES IN trip VERSION 1.1-17

OVERVIEW

 o This release provides some overdue cleanup and improvements. 

SIGNIFICANT USER-VISIBLE CHANGES

 o readArgos is now significantly faster and more reliable

 o new function explode to convert to a SpatialLinesDataFrame with
   line segments for every individual time step

 o trackAngle is now generic with methods for trip objects and matrix/es

BUG FIXES

 o fixed line width in vignette


  CHANGES IN trip VERSION 1.1-16

 o trackDistance is now generic, with a new argument "prev"
